<resources>
    <string name="app_name">FeedProcject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="country">Country:</string>
    <string name="sport">Sport:</string>
    <string name="club">Club:</string>
    <string name="age">Age:</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action">Action:</string>
    <string name="splash">ENYOJ.</string>
</resources>