<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="athlete"
            type="skrla.feedproject.model.data.models.AthleteApi" />

        <variable
            name="feedViewModel"
            type="skrla.feedproject.viewmodels.FeedViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SingleAthleteFragment"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            app:imageUrl="@{feedViewModel.singleAthleteApi.picOfPerson}"
            tools:srcCompat="@tools:sample/avatars"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/name"
            style="@style/Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{feedViewModel.singleAthleteApi.name}"
            style="@style/Body2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Body2"
            android:text="@string/age"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Body2"
            android:text="@{feedViewModel.singleAthleteApi.age}"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Body2"
            android:text="@string/country"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Body2"
            android:text="@{feedViewModel.singleAthleteApi.country.name}"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Body2"
            android:text="@string/sport"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Body2"
            android:text="@{feedViewModel.singleAthleteApi.sport.name}"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Body2"
            android:text="@string/club"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Body2"
            android:text="@{feedViewModel.singleAthleteApi.club}"/>


    </LinearLayout>
</layout>