<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="athlete"
            type="skrla.feedproject.model.data.models.AthleteApi" />

        <variable
            name="feedViewModel"
            type="skrla.feedproject.viewmodels.FeedViewModel" />

    </data>

    <LinearLayout
        android:id="@+id/athlete_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/athlete_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/athlete_img"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    app:imageUrl="@{athlete.picOfPerson}"
                    tools:srcCompat="@tools:sample/avatars" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/name_txt"
                            style="@style/Body1.Relative"
                            android:text="@string/name" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/athlete_name"
                            style="@style/Body2.Relative"
                            android:layout_alignParentEnd="true"
                            android:layout_toEndOf="@id/name_txt"
                            android:text="@{athlete.name}" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/country_txt"
                            style="@style/Body1.Relative"
                            android:text="@string/country" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/athlete_country"
                            style="@style/Body2.Relative"
                            android:layout_alignParentEnd="true"
                            android:layout_toEndOf="@id/country_txt"
                            android:text="@{athlete.country.name}" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/sport_txt"
                            style="@style/Body1.Relative"
                            android:text="@string/sport" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/athlete_sport"
                            style="@style/Body2.Relative"
                            android:layout_alignParentEnd="true"
                            android:layout_toEndOf="@id/sport_txt"
                            android:text="@{athlete.sport.name}" />
                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/expandable_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/club_txt"
                    style="@style/Body1.Relative"
                    android:text="@string/club"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/athlete_club"
                    style="@style/Body2.Relative"
                    android:text="@{athlete.club}"
                    android:layout_toEndOf="@id/club_txt"
                    android:textAlignment="center"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/age_txt"
                    style="@style/Body1.Relative"
                    android:text="@string/age"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/athlete_age"
                    style="@style/Body2.Relative"
                    android:text="@{athlete.age}"
                    android:layout_toEndOf="@id/age_txt"
                    android:textAlignment="center"/>


            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</layout>